--- a/app/config/config.json
+++ b/app/config/config.json
@@ -16,8 +16,8 @@
       "dialect": "mysql"
     },
     "production": {
-      "dialect": "mysql",
-      "use_env_variable": "JAWSDB_URL"
+      "use_env_variable": "JAWSDB_URL",
+      "dialect": "mysql"
     }
 }
   
