--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "project 2",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "watch": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
